--- a/404.html
+++ b/404.html
@@ -14,5 +14,5 @@
         <app-root></app-root>
 
         <script src="https://kit.fontawesome.com/90a4387bde.js" crossorigin="anonymous"></script>
-    <link rel="modulepreload" href="chunk-B42TK2UP.js"><link rel="modulepreload" href="chunk-DHDAMZ7A.js"><link rel="modulepreload" href="chunk-2I5XHG3W.js"><link rel="modulepreload" href="chunk-K455E4HU.js"><link rel="modulepreload" href="chunk-GR746KJ2.js"><link rel="modulepreload" href="chunk-25S3JCDZ.js"><link rel="modulepreload" href="chunk-V47XIBMX.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-3O23QK5D.js" type="module"></script></body>
+    <link rel="modulepreload" href="chunk-B42TK2UP.js"><link rel="modulepreload" href="chunk-DHDAMZ7A.js"><link rel="modulepreload" href="chunk-2I5XHG3W.js"><link rel="modulepreload" href="chunk-K455E4HU.js"><link rel="modulepreload" href="chunk-GR746KJ2.js"><link rel="modulepreload" href="chunk-25S3JCDZ.js"><link rel="modulepreload" href="chunk-V47XIBMX.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-65KP7LIC.js" type="module"></script></body>
 </html>
